--- a/src/Blanquita.Web/Components/Pages/Abarrotes/ImprimirEtiquetas.razor
+++ b/src/Blanquita.Web/Components/Pages/Abarrotes/ImprimirEtiquetas.razor
@@ -321,6 +321,7 @@
                 Price = producto?.PriceWithTax ?? 0,
                 PrinterIp = printer.IpAddress,
                 PrinterPort = printer.Port,
+                PrinterDpi = printer.Dpi,
                 Quantity = cantidadEtiquetas
             };
 
