--- a/src/Blanquita.Web/Components/Pages/Cajas/RecoCaja.razor
+++ b/src/Blanquita.Web/Components/Pages/Cajas/RecoCaja.razor
@@ -3,6 +3,7 @@
 @using Blanquita.Application.Interfaces
 @using Microsoft.AspNetCore.Components
 @using MudBlazor
+@using System.Globalization
 @inject IPrintingService PrintingService
 @inject ICashRegisterService CashRegisterService
 @inject ICashierService CashierService
@@ -210,7 +211,7 @@
                         <MudText Typo="Typo.caption" Color="Color.Secondary" Class="mb-2">Total a Recolectar</MudText>
                         <MudPaper Elevation="3" Class="pa-4 rounded-lg" Style="background: linear-gradient(135deg, #2e7d32 0%, #66bb6a 100%);">
                             <MudText Typo="Typo.h4" Class="font-weight-bold" Style="color: white;">
-                                $ @CalculateTotal().ToString("N2")
+                                $ @CalculateTotal().ToString("N2", CultureInfo.InvariantCulture)
                             </MudText>
                         </MudPaper>
                     </div>
